infra/ecs-service.tf
resource "aws_ecs_task_definition" "main" {
  family                   = "${var.project_name}-task"
  network_mode             = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  cpu                      = 256
  memory                   = 512
  execution_role_arn       = aws_iam_role.ecs_task_execution.arn
  task_role_arn            = aws_iam_role.ecs_task_execution.arn

  container_definitions = jsonencode([
    {
      name  = "app"
      image = "123456789012.dkr.ecr.${var.aws_region}.amazonaws.com/${var.project_name}:latest"

      essential = true
      portMappings = [
        {
          containerPort = 80
          hostPort      = 80
        }
      ]
    }
  ])
}

resource "aws_ecs_service" "main" {
  name            = "${var.project_name}-service"
  cluster         = aws_ecs_cluster.main.id
  task_definition = aws_ecs_task_definition.main.arn
  launch_type     = "FARGATE"
  desired_count   = 1

  network_configuration {
  subnets         = [for s in aws_subnet.private : s.id]  # correct
  security_groups = [aws_security_group.ecs_sg.id]
  assign_public_ip = false
}

  load_balancer {
    target_group_arn = aws_lb_target_group.tg[var.main_service].arn
    container_name   = "app"
    container_port   = 80
  }

  depends_on = [
    aws_lb_listener_rule.rules
  ]
}
